--- a/index.html
+++ b/index.html
@@ -155,4 +155,4 @@
         <a href="https://www.linkedin.com/in/rohit-rajput-94a401274/" target="blank"><i class="fab fa-linkedin">
             Linkedin</i></a>
         
-        <a href="https://www.instagram.com/rajrohit__21/" target
+        <a href="https://www.instagram.com/rajrohit__21/" target="blank">Instagram</a>
