--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             <button><a href target="blank">View source <i
                   class="fas fa-external-link-alt"></i></a>
             </button>
-            <button><a href="C:\bhavika\temp.html" target="blank">Try it Live <i
+            <button><a href="https://rohitrajput021.github.io/Calculator/" target="blank">Try it Live <i
                   class="fas fa-external-link-alt"></i></a>
             </button>
           </div>
